# fusefiles

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  extensions.rs  file_processor.rs  ignore.rs  lib.rs  main.rs  tree.rs  utils.rs
src/output/: default.rs  markdown.rs  mod.rs  xml.rs
tests/: integration_tests.rs
