[package]
name = "files-to-prompt"
version = "0.6.0"
edition = "2021"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
license = "Apache-2.0"
authors = ["files-to-prompt-rs contributors"]
repository = "https://github.com/finnatsea/files-to-prompt-rs"
readme = "README.md"
keywords = ["cli", "files", "prompt", "llm", "concatenate"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "files-to-prompt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
walkdir = "2.0"
glob = "0.3"
atty = "0.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"