[package]
name = "fusefiles"
version = "0.6.3"
edition = "2021"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
license = "Apache-2.0"
authors = ["Finnian Brown"]
repository = "https://github.com/finnatsea/fusefiles"
readme = "README.md"
keywords = ["cli", "files", "prompt", "llm", "concatenate"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["files-to-prompt/", "docs/", ".vscode/", ".claude/"]

[[bin]]
name = "fuse"
path = "src/main.rs"

[[bin]]
name = "fusefiles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
glob = "0.3"
atty = "0.2"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
